# Embedded-multispectral-fusion-pipeline

./: .gitignore  README.md  Reference_Links.md  pyproject.toml  setup.py
Other_Guiding_docs/: AGENTS.md  CLAUDE.md  EVAL_BENCHMARK_DEFENSE_GUIDE.md  EVAL_DOMAIN_SHIFT_MAD_WORK_REPORT.md  PIPELINE.md  RECOVERY_TEST_EVAL_BENCHMARK_PLAN.md  REVIEW_PRIORITY_REPORT.md  THESIS_EVAL_INTEGRATION_REFINEMENT_REPORT.md  THESIS_EVAL_INTEGRATION_WORK_REPORT.md  THESIS_REFINEMENT_WORK_REPORT.md
data/: README.md
docs/: CHANGELOG.md  DATASET_LOCAL_STATUS.md  EDGE_IMPULSE_FUTURE_WORK.md  PIPELINE_EVIDENCE_REGISTER.md  README.md  THESIS_SCOPE_LIMITATIONS.md  UI_FIELD_CHECKLIST.md  research_report_20260415_env_policy_branching_optical_v4.md  research_report_20260421_thesis_improvement.md
legacy/: README.md
models/: README.md  model_registry.json  train_classifier.py
scripts/: README.md
src/: README.md
tests/: test_3dnr_alpha_sweep.py  test_ab_fusion_vs_nir_consistency.py  test_button_input_no_gpio.py  test_capture_layers.py  test_capture_paired_data_standalone.py  test_ei_person_in_dark.py  test_env_compositor.py  test_env_preset_hysteresis.py  test_eval_ei_person.py  test_feature_schema.py  test_fusion_alpha_sweep_consistency.py  test_fusion_eval_metrics.py  test_fusion_evidence_readiness.py  test_fusion_failure_mining.py  test_fusion_naming_aliases.py  test_fusion_pairing_manifest.py  test_fusion_runtime_timing_hardening.py  test_hud_layout.py  test_hud_state_immutability.py  test_infer_env_tags_auto_rule.py  test_ml_final_evidence_tools.py  test_ml_inference.py  test_ml_phase1_tools.py  test_ml_phase3_tools.py  test_ml_phase4_tools.py  test_ml_sensor_phase_tools.py  test_ml_suggested_label_tools.py  test_model_registry_integrity.py  test_mouse_router_priority.py  test_nir_pipeline.py  test_optical_bucket_dispatch.py  test_paired_data_manifest.py  test_paired_fusion_evaluation.py  (+18 more)
(+430 files in other folders)
